crates/tankan/tests/snapshots/corpus_test__svg_packet_01-basic.snap
---
source: crates/tankan/tests/corpus_test.rs
expression: svg
---
<svg class="tankan tankan-packet" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1056 126" width="1056" height="126" role="img" aria-label="Packet" font-family="sans-serif" font-size="14">
<style>
.tankan text { fill: #1f2328; }
.tankan .tk-title { font-weight: bold; }
.tankan .tk-pk-block { fill: #f6f8fa; stroke: #d1d9e0; }
.tankan .tk-pk-bit { fill: #59636e; font-size: 10.5px; }
</style>
<rect class="tk-pk-block" x="21" y="28.5" width="507" height="32"/>
<text class="tk-pk-bit" x="21" y="25.5" text-anchor="start">0</text>
<text class="tk-pk-bit" x="528" y="25.5" text-anchor="end">15</text>
<text class="tk-pk-label" x="274.5" y="49.5" text-anchor="middle">Source Port</text>
<rect class="tk-pk-block" x="533" y="28.5" width="507" height="32"/>
<text class="tk-pk-bit" x="533" y="25.5" text-anchor="start">16</text>
<text class="tk-pk-bit" x="1040" y="25.5" text-anchor="end">31</text>
<text class="tk-pk-label" x="786.5" y="49.5" text-anchor="middle">Destination Port</text>
<rect class="tk-pk-block" x="21" y="78" width="507" height="32"/>
<text class="tk-pk-bit" x="21" y="75" text-anchor="start">32</text>
<text class="tk-pk-bit" x="528" y="75" text-anchor="end">47</text>
<text class="tk-pk-label" x="274.5" y="99" text-anchor="middle">Length</text>
<rect class="tk-pk-block" x="533" y="78" width="507" height="32"/>
<text class="tk-pk-bit" x="533" y="75" text-anchor="start">48</text>
<text class="tk-pk-bit" x="1040" y="75" text-anchor="end">63</text>
<text class="tk-pk-label" x="786.5" y="99" text-anchor="middle">Checksum</text>
</svg>
