crates/tankan/tests/snapshots/corpus_test__svg_packet_02-tcp.snap
---
source: crates/tankan/tests/corpus_test.rs
expression: svg
---
<svg class="tankan tankan-packet" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1056 452" width="1056" height="452" role="img" aria-label="TCP Packet" font-family="sans-serif" font-size="14">
<style>
.tankan text { fill: #1f2328; }
.tankan .tk-title { font-weight: bold; }
.tankan .tk-pk-block { fill: #f6f8fa; stroke: #d1d9e0; }
.tankan .tk-pk-bit { fill: #59636e; font-size: 10.5px; }
</style>
<text class="tk-title" x="528" y="28" text-anchor="middle">TCP Packet</text>
<rect class="tk-pk-block" x="21" y="56.5" width="507" height="32"/>
<text class="tk-pk-bit" x="21" y="53.5" text-anchor="start">0</text>
<text class="tk-pk-bit" x="528" y="53.5" text-anchor="end">15</text>
<text class="tk-pk-label" x="274.5" y="77.5" text-anchor="middle">Source Port</text>
<rect class="tk-pk-block" x="533" y="56.5" width="507" height="32"/>
<text class="tk-pk-bit" x="533" y="53.5" text-anchor="start">16</text>
<text class="tk-pk-bit" x="1040" y="53.5" text-anchor="end">31</text>
<text class="tk-pk-label" x="786.5" y="77.5" text-anchor="middle">Destination Port</text>
<rect class="tk-pk-block" x="21" y="106" width="1019" height="32"/>
<text class="tk-pk-bit" x="21" y="103" text-anchor="start">32</text>
<text class="tk-pk-bit" x="1040" y="103" text-anchor="end">63</text>
<text class="tk-pk-label" x="530.5" y="127" text-anchor="middle">Sequence Number</text>
<rect class="tk-pk-block" x="21" y="156" width="1019" height="32"/>
<text class="tk-pk-bit" x="21" y="153" text-anchor="start">64</text>
<text class="tk-pk-bit" x="1040" y="153" text-anchor="end">95</text>
<text class="tk-pk-label" x="530.5" y="176.5" text-anchor="middle">Acknowledgment Number</text>
<rect class="tk-pk-block" x="21" y="205.5" width="123" height="32"/>
<text class="tk-pk-bit" x="21" y="202.5" text-anchor="start">96</text>
<text class="tk-pk-bit" x="144" y="202.5" text-anchor="end">99</text>
<text class="tk-pk-label" x="82.5" y="226.5" text-anchor="middle">Data Offset</text>
<rect class="tk-pk-block" x="149" y="205.5" width="187" height="32"/>
<text class="tk-pk-bit" x="149" y="202.5" text-anchor="start">100</text>
<text class="tk-pk-bit" x="336" y="202.5" text-anchor="end">105</text>
<text class="tk-pk-label" x="242.5" y="226.5" text-anchor="middle">Reserved</text>
<rect class="tk-pk-block" x="341" y="205.5" width="27" height="32"/>
<text class="tk-pk-bit" x="354.5" y="202.5" text-anchor="middle">106</text>
<text class="tk-pk-label" x="354.5" y="226.5" text-anchor="middle">URG</text>
<rect class="tk-pk-block" x="373" y="205.5" width="27" height="32"/>
<text class="tk-pk-bit" x="386.5" y="202.5" text-anchor="middle">107</text>
<text class="tk-pk-label" x="386.5" y="226.5" text-anchor="middle">ACK</text>
<rect class="tk-pk-block" x="405" y="205.5" width="27" height="32"/>
<text class="tk-pk-bit" x="418.5" y="202.5" text-anchor="middle">108</text>
<text class="tk-pk-label" x="418.5" y="226.5" text-anchor="middle">PSH</text>
<rect class="tk-pk-block" x="437" y="205.5" width="27" height="32"/>
<text class="tk-pk-bit" x="450.5" y="202.5" text-anchor="middle">109</text>
<text class="tk-pk-label" x="450.5" y="226.5" text-anchor="middle">RST</text>
<rect class="tk-pk-block" x="469" y="205.5" width="27" height="32"/>
<text class="tk-pk-bit" x="482.5" y="202.5" text-anchor="middle">110</text>
<text class="tk-pk-label" x="482.5" y="226.5" text-anchor="middle">SYN</text>
<rect class="tk-pk-block" x="501" y="205.5" width="27" height="32"/>
<text class="tk-pk-bit" x="514.5" y="202.5" text-anchor="middle">111</text>
<text class="tk-pk-label" x="514.5" y="226.5" text-anchor="middle">FIN</text>
<rect class="tk-pk-block" x="533" y="205.5" width="507" height="32"/>
<text class="tk-pk-bit" x="533" y="202.5" text-anchor="start">112</text>
<text class="tk-pk-bit" x="1040" y="202.5" text-anchor="end">127</text>
<text class="tk-pk-label" x="786.5" y="226.5" text-anchor="middle">Window</text>
<rect class="tk-pk-block" x="21" y="255" width="507" height="32"/>
<text class="tk-pk-bit" x="21" y="252" text-anchor="start">128</text>
<text class="tk-pk-bit" x="528" y="252" text-anchor="end">143</text>
<text class="tk-pk-label" x="274.5" y="276" text-anchor="middle">Checksum</text>
<rect class="tk-pk-block" x="533" y="255" width="507" height="32"/>
<text class="tk-pk-bit" x="533" y="252" text-anchor="start">144</text>
<text class="tk-pk-bit" x="1040" y="252" text-anchor="end">159</text>
<text class="tk-pk-label" x="786.5" y="276" text-anchor="middle">Urgent Pointer</text>
<rect class="tk-pk-block" x="21" y="304.5" width="1019" height="32"/>
<text class="tk-pk-bit" x="21" y="301.5" text-anchor="start">160</text>
<text class="tk-pk-bit" x="1040" y="301.5" text-anchor="end">191</text>
<text class="tk-pk-label" x="530.5" y="325.5" text-anchor="middle">(Options and Padding)</text>
<rect class="tk-pk-block" x="21" y="354" width="1019" height="32"/>
<text class="tk-pk-bit" x="21" y="351" text-anchor="start">192</text>
<text class="tk-pk-bit" x="1040" y="351" text-anchor="end">223</text>
<text class="tk-pk-label" x="530.5" y="375" text-anchor="middle">Data (variable length)</text>
<rect class="tk-pk-block" x="21" y="404" width="1019" height="32"/>
<text class="tk-pk-bit" x="21" y="401" text-anchor="start">224</text>
<text class="tk-pk-bit" x="1040" y="401" text-anchor="end">255</text>
<text class="tk-pk-label" x="530.5" y="424.5" text-anchor="middle">Data (variable length)</text>
</svg>
