crates/tankan/tests/snapshots/corpus_test__svg_packet_05-japanese.snap
---
source: crates/tankan/tests/corpus_test.rs
expression: svg
---
<svg class="tankan tankan-packet" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1056 204" width="1056" height="204" role="img" aria-label="パケット構造（日本語）" font-family="sans-serif" font-size="14">
<style>
.tankan text { fill: #1f2328; }
.tankan .tk-title { font-weight: bold; }
.tankan .tk-pk-block { fill: #f6f8fa; stroke: #d1d9e0; }
.tankan .tk-pk-bit { fill: #59636e; font-size: 10.5px; }
</style>
<text class="tk-title" x="528" y="28" text-anchor="middle">パケット構造（日本語）</text>
<rect class="tk-pk-block" x="21" y="56.5" width="507" height="32"/>
<text class="tk-pk-bit" x="21" y="53.5" text-anchor="start">0</text>
<text class="tk-pk-bit" x="528" y="53.5" text-anchor="end">15</text>
<text class="tk-pk-label" x="274.5" y="77.5" text-anchor="middle">送信元ポート</text>
<rect class="tk-pk-block" x="533" y="56.5" width="507" height="32"/>
<text class="tk-pk-bit" x="533" y="53.5" text-anchor="start">16</text>
<text class="tk-pk-bit" x="1040" y="53.5" text-anchor="end">31</text>
<text class="tk-pk-label" x="786.5" y="77.5" text-anchor="middle">宛先ポート</text>
<rect class="tk-pk-block" x="21" y="106" width="1019" height="32"/>
<text class="tk-pk-bit" x="21" y="103" text-anchor="start">32</text>
<text class="tk-pk-bit" x="1040" y="103" text-anchor="end">63</text>
<text class="tk-pk-label" x="530.5" y="127" text-anchor="middle">シーケンス番号</text>
<rect class="tk-pk-block" x="21" y="156" width="251" height="32"/>
<text class="tk-pk-bit" x="21" y="153" text-anchor="start">64</text>
<text class="tk-pk-bit" x="272" y="153" text-anchor="end">71</text>
<text class="tk-pk-label" x="146.5" y="176.5" text-anchor="middle">フラグ</text>
<rect class="tk-pk-block" x="277" y="156" width="763" height="32"/>
<text class="tk-pk-bit" x="277" y="153" text-anchor="start">72</text>
<text class="tk-pk-bit" x="1040" y="153" text-anchor="end">95</text>
<text class="tk-pk-label" x="658.5" y="176.5" text-anchor="middle">予約領域</text>
</svg>
