crates/tankan/tests/snapshots/corpus_test__svg_packet_06-config.snap
---
source: crates/tankan/tests/corpus_test.rs
expression: svg
---
<svg class="tankan tankan-packet" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 544 154" width="544" height="154" role="img" aria-label="IPv4 Header" font-family="sans-serif" font-size="14">
<style>
.tankan text { fill: #1f2328; }
.tankan .tk-title { font-weight: bold; }
.tankan .tk-pk-block { fill: #f6f8fa; stroke: #d1d9e0; }
.tankan .tk-pk-bit { fill: #59636e; font-size: 10.5px; }
</style>
<text class="tk-title" x="272" y="28" text-anchor="middle">IPv4 Header</text>
<rect class="tk-pk-block" x="21" y="56.5" width="123" height="32"/>
<text class="tk-pk-bit" x="21" y="53.5" text-anchor="start">0</text>
<text class="tk-pk-bit" x="144" y="53.5" text-anchor="end">3</text>
<text class="tk-pk-label" x="82.5" y="77.5" text-anchor="middle">Version</text>
<rect class="tk-pk-block" x="149" y="56.5" width="123" height="32"/>
<text class="tk-pk-bit" x="149" y="53.5" text-anchor="start">4</text>
<text class="tk-pk-bit" x="272" y="53.5" text-anchor="end">7</text>
<text class="tk-pk-label" x="210.5" y="77.5" text-anchor="middle">IHL</text>
<rect class="tk-pk-block" x="277" y="56.5" width="187" height="32"/>
<text class="tk-pk-bit" x="277" y="53.5" text-anchor="start">8</text>
<text class="tk-pk-bit" x="464" y="53.5" text-anchor="end">13</text>
<text class="tk-pk-label" x="370.5" y="77.5" text-anchor="middle">DSCP</text>
<rect class="tk-pk-block" x="469" y="56.5" width="59" height="32"/>
<text class="tk-pk-bit" x="469" y="53.5" text-anchor="start">14</text>
<text class="tk-pk-bit" x="528" y="53.5" text-anchor="end">15</text>
<text class="tk-pk-label" x="498.5" y="77.5" text-anchor="middle">ECN</text>
<rect class="tk-pk-block" x="21" y="106" width="507" height="32"/>
<text class="tk-pk-bit" x="21" y="103" text-anchor="start">16</text>
<text class="tk-pk-bit" x="528" y="103" text-anchor="end">31</text>
<text class="tk-pk-label" x="274.5" y="127" text-anchor="middle">Total Length</text>
</svg>
