crates/tankan/tests/snapshots/corpus_test__svg_pie_04-japanese.snap
---
source: crates/tankan/tests/corpus_test.rs
expression: svg
---
<svg class="tankan tankan-pie" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 343 240" width="343" height="240" role="img" aria-label="好きな柑橘" font-family="sans-serif" font-size="14">
<style>
.tankan text { fill: #1f2328; }
.tankan .tk-pie-title { font-weight: bold; }
.tankan .tk-pie-slice { stroke: #ffffff; stroke-width: 2; }
.tankan .tk-pie-pct { fill: #ffffff; font-weight: bold; }
.tankan .tk-pie-c0 { fill: var(--tankan-pie-1, #5778a4); }
.tankan .tk-pie-c1 { fill: var(--tankan-pie-2, #e49444); }
.tankan .tk-pie-c2 { fill: var(--tankan-pie-3, #d1615d); }
.tankan .tk-pie-c3 { fill: var(--tankan-pie-4, #85b6b2); }
.tankan .tk-pie-c4 { fill: var(--tankan-pie-5, #6a9f58); }
.tankan .tk-pie-c5 { fill: var(--tankan-pie-6, #e7ca60); }
.tankan .tk-pie-c6 { fill: var(--tankan-pie-7, #a87c9f); }
.tankan .tk-pie-c7 { fill: var(--tankan-pie-8, #967662); }
</style>
<text class="tk-pie-title" x="171.5" y="30" text-anchor="middle">好きな柑橘</text>
<path class="tk-pie-slice tk-pie-c0" d="M106,134 L106,44 A90,90 0 0 1 134,219.5 Z"/>
<text class="tk-pie-pct" x="161" y="130" text-anchor="middle">45%</text>
<path class="tk-pie-slice tk-pie-c1" d="M106,134 L134,219.5 A90,90 0 0 1 16,134 Z"/>
<text class="tk-pie-pct" x="73" y="184" text-anchor="middle">30%</text>
<path class="tk-pie-slice tk-pie-c2" d="M106,134 L16,134 A90,90 0 0 1 53,61 Z"/>
<text class="tk-pie-pct" x="56.5" y="113.5" text-anchor="middle">15%</text>
<path class="tk-pie-slice tk-pie-c3" d="M106,134 L53,61 A90,90 0 0 1 106,44 Z"/>
<text class="tk-pie-pct" x="89" y="86" text-anchor="middle">10%</text>
<rect class="tk-pie-c0" x="224" y="94.5" width="12" height="12"/>
<text class="tk-pie-legend" x="244" y="105.5" text-anchor="start">ゆず [45]</text>
<rect class="tk-pie-c1" x="224" y="117" width="12" height="12"/>
<text class="tk-pie-legend" x="244" y="127.5" text-anchor="start">たんかん [30]</text>
<rect class="tk-pie-c2" x="224" y="139" width="12" height="12"/>
<text class="tk-pie-legend" x="244" y="150" text-anchor="start">きんかん [15]</text>
<rect class="tk-pie-c3" x="224" y="161.5" width="12" height="12"/>
<text class="tk-pie-legend" x="244" y="172.5" text-anchor="start">すだち [10]</text>
</svg>
