crates/tankan/tests/snapshots/corpus_test__svg_sequence_14-title-frontmatter.snap
---
source: crates/tankan/tests/corpus_test.rs
expression: svg
---
<svg class="tankan tankan-sequence" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 450 262" width="450" height="262" role="img" aria-label="認証フロー" font-family="sans-serif" font-size="14">
<style>
.tankan text { fill: #1f2328; }
.tankan .tk-actor rect { fill: #ffffff; stroke: #d1d9e0; }
.tankan .tk-actor-figure { stroke: #1f2328; fill: none; }
.tankan .tk-lifeline { stroke: #59636e; }
.tankan .tk-msg { stroke: #1f2328; fill: none; }
.tankan .tk-head-fill { fill: #1f2328; }
.tankan .tk-head-line { stroke: #1f2328; fill: none; stroke-width: 1.5; }
.tankan .tk-activation { fill: #f6f8fa; stroke: #d1d9e0; }
.tankan .tk-note { fill: #f6f8fa; stroke: #d1d9e0; }
.tankan .tk-frame { stroke: #d1d9e0; fill: none; }
.tankan .tk-frame-sep { stroke: #d1d9e0; stroke-dasharray: 4,4; }
.tankan .tk-frame-labelbox { fill: #f6f8fa; stroke: #d1d9e0; }
.tankan .tk-frame-kind { font-weight: bold; }
.tankan .tk-frame-label { fill: #59636e; }
.tankan .tk-groupbox { stroke: #d1d9e0; fill: none; }
.tankan .tk-groupbox-bg { stroke: none; }
.tankan .tk-seqnum circle { fill: #9a6700; }
.tankan .tk-seqnum text { fill: #ffffff; font-size: 11px; }
.tankan .tk-title { font-weight: bold; }
</style>
<defs>
<marker id="tk-head" viewBox="0 0 10 10" refX="9" refY="5" markerWidth="7" markerHeight="7" orient="auto-start-reverse"><path class="tk-head-fill" d="M0,0 L10,5 L0,10 z"/></marker>
<marker id="tk-open" viewBox="0 0 10 10" refX="9" refY="5" markerWidth="9" markerHeight="9" orient="auto-start-reverse"><path class="tk-head-line" d="M1,1 L9,5 L1,9"/></marker>
<marker id="tk-cross" viewBox="0 0 10 10" refX="5" refY="5" markerWidth="8" markerHeight="8" orient="auto"><path class="tk-head-line" d="M1,1 L9,9 M9,1 L1,9"/></marker>
</defs>
<line class="tk-lifeline" x1="125" y1="81" x2="125" y2="208.5"/>
<line class="tk-lifeline" x1="325" y1="81" x2="325" y2="208.5"/>
<rect class="tk-activation" x="320" y="127" width="10" height="50.5"/>
<line class="tk-msg" x1="125" y1="127" x2="325" y2="127" marker-end="url(#tk-head)"/>
<text class="tk-msg-text" x="225" y="117" text-anchor="middle">ログイン要求</text>
<line class="tk-msg" x1="325" y1="177.5" x2="125" y2="177.5" stroke-dasharray="3,3" marker-end="url(#tk-head)"/>
<text class="tk-msg-text" x="225" y="167.5" text-anchor="middle">トークン発行</text>
<g class="tk-actor">
<rect class="tk-actor-box" x="50" y="37.5" width="150" height="43.5" rx="3"/>
<text class="tk-actor-label" x="125" y="61.5" text-anchor="middle">利用者</text>
</g>
<g class="tk-actor">
<rect class="tk-actor-box" x="50" y="208.5" width="150" height="43.5" rx="3"/>
<text class="tk-actor-label" x="125" y="232.5" text-anchor="middle">利用者</text>
</g>
<g class="tk-actor">
<rect class="tk-actor-box" x="250" y="37.5" width="150" height="43.5" rx="3"/>
<text class="tk-actor-label" x="325" y="61.5" text-anchor="middle">認証サービス</text>
</g>
<g class="tk-actor">
<rect class="tk-actor-box" x="250" y="208.5" width="150" height="43.5" rx="3"/>
<text class="tk-actor-label" x="325" y="232.5" text-anchor="middle">認証サービス</text>
</g>
<text class="tk-title" x="225" y="25.5" text-anchor="middle">認証フロー</text>
</svg>
