crates/tankan/tests/snapshots/corpus_test__svg_state_08-concurrency.snap
---
source: crates/tankan/tests/corpus_test.rs
expression: svg
---
<svg class="tankan tankan-state" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 908.5 576" width="908.5" height="576" role="img" aria-label="State diagram" font-family="sans-serif" font-size="14">
<style>
.tankan text { fill: #1f2328; }
.tankan .tk-node { fill: #f6f8fa; stroke: #d1d9e0; }
.tankan .tk-node-line { stroke: #d1d9e0; fill: none; }
.tankan .tk-edge { stroke: #1f2328; fill: none; }
.tankan .tk-head-fill { fill: #1f2328; }
.tankan .tk-head-line { stroke: #1f2328; fill: none; stroke-width: 1.5; }
.tankan .tk-edge-label rect { fill: #ffffff; stroke: none; }
.tankan .tk-cluster { fill: #f6f8fa; fill-opacity: 0.4; stroke: #d1d9e0; }
.tankan .tk-cluster-title { fill: #59636e; }
.tankan .tk-region { fill: none; stroke: #d1d9e0; stroke-dasharray: 4,4; }
.tankan .tk-state-dot { fill: #1f2328; stroke: none; }
.tankan .tk-notebox { fill: #f6f8fa; stroke: #d1d9e0; stroke-dasharray: 3,3; }
</style>
<defs>
<marker id="tk-arrow" viewBox="0 0 10 10" refX="9" refY="5" markerWidth="7" markerHeight="7" orient="auto-start-reverse"><path class="tk-head-fill" d="M0,0 L10,5 L0,10 z"/></marker>
<marker id="tk-circle" viewBox="0 0 10 10" refX="5" refY="5" markerWidth="9" markerHeight="9" orient="auto"><circle class="tk-head-fill" cx="5" cy="5" r="4"/></marker>
<marker id="tk-cross" viewBox="0 0 10 10" refX="5" refY="5" markerWidth="9" markerHeight="9" orient="auto"><path class="tk-head-line" d="M1,1 L9,9 M9,1 L1,9"/></marker>
</defs>
<rect class="tk-cluster" x="20" y="84" width="863.5" height="472" rx="4"/>
<text class="tk-cluster-title" x="451.5" y="100" text-anchor="middle">Active</text>
<rect class="tk-region" x="48" y="136" width="375.5" height="392" rx="4"/>
<rect class="tk-region" x="473.5" y="136" width="382" height="392" rx="4"/>
<path class="tk-edge" d="M 328,184 L 328,228.5 Q 328,234.5 328,240.5 L 328,285" marker-end="url(#tk-arrow)"/>
<path class="tk-edge" d="M 281,328.5 L 149,390 Q 143.5,392.5 149,395 L 281,456" marker-end="url(#tk-arrow)"/>
<g class="tk-edge-label">
<rect class="" x="76" y="380.5" width="135" height="23.5"/>
<text class="" x="143.5" y="394.5" text-anchor="middle">EvNumLockPressed</text>
</g>
<path class="tk-edge" d="M 328,456 L 328,398.5 Q 328,392.5 328,386.5 L 328,328.5" marker-end="url(#tk-arrow)"/>
<g class="tk-edge-label">
<rect class="" x="261" y="380.5" width="135" height="23.5"/>
<text class="" x="328" y="394.5" text-anchor="middle">EvNumLockPressed</text>
</g>
<path class="tk-edge" d="M 758.5,184 L 758.5,228.5 Q 758.5,234.5 758.5,240.5 L 758.5,285" marker-end="url(#tk-arrow)"/>
<path class="tk-edge" d="M 710.5,328.5 L 576,390 Q 570.5,392.5 576,395 L 710.5,456" marker-end="url(#tk-arrow)"/>
<g class="tk-edge-label">
<rect class="" x="501.5" y="380.5" width="138" height="23.5"/>
<text class="" x="570.5" y="394.5" text-anchor="middle">EvCapsLockPressed</text>
</g>
<path class="tk-edge" d="M 758.5,456 L 758.5,398.5 Q 758.5,392.5 758.5,386.5 L 758.5,328.5" marker-end="url(#tk-arrow)"/>
<g class="tk-edge-label">
<rect class="" x="689.5" y="380.5" width="138" height="23.5"/>
<text class="" x="758.5" y="394.5" text-anchor="middle">EvCapsLockPressed</text>
</g>
<path class="tk-edge" d="M 451.5,34 L 451.5,84" marker-end="url(#tk-arrow)"/>
<circle class="tk-state-dot" cx="451.5" cy="27" r="7"/>
<circle class="tk-state-dot" cx="328" cy="177" r="7"/>
<rect class="tk-node" x="274.5" y="285" width="108" height="43.5" rx="6"/>
<text class="tk-node-label" x="328" y="309" text-anchor="middle">NumLockOff</text>
<rect class="tk-node" x="274.5" y="456" width="108" height="43.5" rx="6"/>
<text class="tk-node-label" x="328" y="480" text-anchor="middle">NumLockOn</text>
<circle class="tk-state-dot" cx="758.5" cy="177" r="7"/>
<rect class="tk-node" x="703" y="285" width="111" height="43.5" rx="6"/>
<text class="tk-node-label" x="758.5" y="309" text-anchor="middle">CapsLockOff</text>
<rect class="tk-node" x="703" y="456" width="111" height="43.5" rx="6"/>
<text class="tk-node-label" x="758.5" y="480" text-anchor="middle">CapsLockOn</text>
</svg>
